--- a/index.html
+++ b/index.html
@@ -17,80 +17,145 @@
   
   <body>
   	<div class="home" id="home">
-  		<div class="container">		
-				<row>
-					<div class="jumbotron jumbotron-fluid">
-					    <h1 class="cover">PORTFOLIO</h1>
-					    <p class="cover1">SIENNA VINASILVA</p>
-					  </div>
-				</row>
-			<row>
+  		<div class="container">
+			<header>
+				<h3 class="title">PROFESSIONAL PORTFOLIO</h3>
 				<nav class="navbar navbar-expand-lg navbar-light">
-				  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-				    <span class="navbar-toggler-icon"></span>
-				  </button>
+						 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+						  <span class="navbar-toggler-icon"></span>
+						 </button>
 
-				  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-				    <ul class="navbar-nav mr-auto d-flex d-flex justify-content-start nav-fill w-100">
-				      <li class="nav-item active">
-				        <a class="nav-link" href="#home">Home<span class="sr-only">(current)</span></a>
-				      </li>
-				      <li class="nav-item active">
-				        <a class="nav-link" href="#about">About<span class="sr-only">(current)</span></a>
-				      </li>
-				      <li class="nav-item active">
-				        <a class="nav-link" href="#projects">Projects<span class="sr-only">(current)</span></a>
-				      </li>
-				      <li class="nav-item active">
-				        <a class="nav-link" href="#skills">Skills<span class="sr-only">(current)</span></a>
-				      </li>
-				      <li class="nav-item active">
-				        <a class="nav-link" href="#contact">Contact<span class="sr-only">(current)</span></a>
-				      </li>
-				    </ul>
-				  </div>
+						 <div class="collapse navbar-collapse" id="navbarSupportedContent">
+							  <ul class="navbar-nav mr-auto nav-fill w-100">
+								  <li class="nav-item active">
+								   <a class="nav-link" href="#home">Home<span class="sr-only">(current)</span></a>
+								  </li>
+								  <li class="nav-item active">
+								   <a class="nav-link" href="#about">About<span class="sr-only">(current)</span></a>
+								  </li>
+								  <li class="nav-item active">
+								   <a class="nav-link" href="#projects">Projects<span class="sr-only">(current)</span></a>
+								  </li>
+								  <li class="nav-item active">
+								   <a class="nav-link" href="#skills">Skills<span class="sr-only">(current)</span></a>
+								  </li>
+								  <li class="nav-item active">
+								   <a class="nav-link" href="#contact">Contact<span class="sr-only">(current)</span></a>
+								  </li>
+							  </ul>
+						 </div>
 				</nav>
-			</row>
+			</header>
+				<main>
+					<div class="row">
+						<div class="col-md-6 col-lg-4">
+						  	<div class="row">
+						  		<div class="col-12">
+									<img class="jum" src="assets/images/jum1.jpg">
+						  		</div>
+						  		<div class="col-12">
+							   		<img class="jum" src="assets/images/jum2.jpeg">
+						  		</div>
+							</div>
+						</div>
+						<div class="col-md-6 col-lg-8">
+							<div class="welcome-message">
+								<div>
+									<h3  id="welcome"> SIENNA VINA SILVA </h3>
+								</div>
+								<div class="">
+								 		<p>Welcome to my portfolio. Portfolios are not really assessments at all because they 	are just collections of previously completed assessments. But, if we consider assessing as gathering of information about someone or something for a purpose, then a portfolio is a type of assessment.</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</main>
 		</div>
 	</div>
 
 
-	 <div class="page container">
-		<header>
-		<div class="about" id="about">
-			<h1 class="">ABOUT ME</h1>
-		</div>
-		</header>
-		<main>
-			<div class="">
-				<h2 class="">lorem ipsum</h2>
-				<row>
-				<div class="d-flex d-inline-flex">
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est 
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					<img src="assets/images/me.png">
+	<div class="about" id="about">
+  		<div class="container">
+			<header>
+				<h3 class="title">ABOUT ME</h3>
+				<nav class="navbar navbar-expand-lg navbar-light">
+						 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+						  <span class="navbar-toggler-icon"></span>
+						 </button>
+
+						 <div class="collapse navbar-collapse" id="navbarSupportedContent">
+							  <ul class="navbar-nav mr-auto nav-fill w-100">
+								  <li class="nav-item active">
+								   <a class="nav-link" href="#home">Home<span class="sr-only">(current)</span></a>
+								  </li>
+								  <li class="nav-item active">
+								   <a class="nav-link" href="#about">About<span class="sr-only">(current)</span></a>
+								  </li>
+								  <li class="nav-item active">
+								   <a class="nav-link" href="#projects">Projects<span class="sr-only">(current)</span></a>
+								  </li>
+								  <li class="nav-item active">
+								   <a class="nav-link" href="#skills">Skills<span class="sr-only">(current)</span></a>
+								  </li>
+								  <li class="nav-item active">
+								   <a class="nav-link" href="#contact">Contact<span class="sr-only">(current)</span></a>
+								  </li>
+							  </ul>
+						 </div>
+				</nav>
+			</header>
+
+			<main class="about">
+				<div class="row">
+					<div class="col-md-4 col-lg-4 col-sm-4">
+						<div class="about-details row">
+							<div class= "col-12">
+								<h3 class="heading-about"> Work Experience</h3>
+								<ul>
+									<li class="details-about">
+										<p>TEST PROCESS ENGINEER</p>
+										<p>SFA Semicon Philippines</p>
+										<p>Sept 2015-Nov 2018</p>
+									</li>
+									<li>
+										<p>BMS TECHNICIAN</p>
+										<p>Servcom Philippines Incorporation</p>
+										<p>Sept 2014-Sept 2015</p>
+									</li>
+								</ul>
+							</div>
+							<div class= "col-12">
+								<h3 class="heading-about"> Educational Attainment</h3>
+								<ul>
+									<li class="details-about">
+										<p>BS ELECTRONICS ENGINEERING</p>
+										<p>Saint Louis University</p>
+										<p>2008-2013</p>
+									</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-8 col-lg-8 col-sm-8">
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+					</div>
 				</div>
-				</row>
-			</div>
-		</main>
+				
+			</main>
+		</div>
 	</div>
-	<footer class="bg-light">
-      <p class="text-center">Copyright &copy SiennaSilva2018</p>
-    </footer>
+	
 
+
+<div class="projects" id="projects">
 	<div class="page container">
-		<header>
-			<div class="projects" id="projects">
-				<h1 class="">My Projects</h1>
-			</div>
+		<header>		
+				<h1>My Projects</h1>
 		</header>
 
 		<main>
@@ -134,18 +199,15 @@
 			</div>
 		</main>
 	</div>
-		<footer class="bg-light">
-      	<p class="text-center">Copyright &copy SiennaSilva2018</p>
-      	</footer>
+</div>
+	
 
 
 
-
+<div class="skills" id="skills">
 	<div class="page container">
 		<header>
-			<div class="skills" id="skills">
-				<h1 class="">SKILLS AND EXPERIENCE</h1>
-			</div>
+				<h1 class="">SKILLS AND EXPERIENCE</h1>	
 		</header>
 		<main>
 			<div class="">
@@ -208,17 +270,13 @@
 			</div>
 		</main>>
 	</div>
-		<footer class="bg-light">
-      	<p class="text-center">Copyright &copy SiennaSilva2018</p>
-      	</footer>
+</div>
 
 
-
+	<div class="contact" id="contact">
 		<div class="page container">
 				<header>
-				<div class="contact" id="contact">
-					<h1 class="contact">CONTACT</h1>
-				</div>
+					<h1>CONTACT</h1>
 				</header>
 				<main>
 					<div class="">
@@ -252,6 +310,7 @@
 				<footer class="bg-light">
       			<p class="text-center">Copyright &copy SiennaSilva2018</p>
       			</footer>
+      	</div>
 			 
 
 
